--- a/muaz-rehman-site/package.json
+++ b/muaz-rehman-site/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/parallax": "^9.1.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -11,10 +12,14 @@
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "antd": "^4.15.3",
+    "framer-motion": "^4.1.11",
+    "matter-js": "^0.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
@@ -43,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/matter-js": "^0.14.11",
     "@types/react-router-dom": "^5.1.7"
   }
 }
