--- a/muaz-rehman-site/package.json
+++ b/muaz-rehman-site/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
+    "react-spring": "9.1.2",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
